--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "github.com/deckarep/golang-set"
   version = "1.6.0"
+
+[[constraint]]
+  name = "github.com/moby/moby"
+  version = "1.13.1"
