--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,7 @@
 [[constraint]]
   name = "github.com/moby/moby"
   version = "1.13.1"
+
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.1.0"
