--- a/build.yml
+++ b/build.yml
@@ -1,3 +1,7 @@
+variables:
+  eval:
+    shortRev: git rev-parse --short HEAD
+
 docker:
   run:
     image: quay.io/fudanchii/go:1.9
@@ -14,6 +18,7 @@ docker:
   build:
     root: .build
     tags:
+      - quay.io/fudanchii/monocle:{{.Eval.shortRev}}
       - quay.io/fudanchii/monocle:latest
     push:
       registry: quay.io
